# ginkgo

./: .gitlab-ci.yml  CMakeLists.txt
.gitlab/: scripts.yml
benchmark/: CMakeLists.txt
benchmark/blas/: blas_common.hpp
benchmark/preconditioner/: preconditioner.cpp
benchmark/solver/: solver.cpp  solver_common.hpp
benchmark/sparse_blas/: sparse_blas.cpp
benchmark/spmv/: spmv_common.hpp
benchmark/utils/: general.hpp  hip_linops.hip.cpp
cmake/: GinkgoConfig.cmake.in  create_test.cmake  ginkgo.pc.in  information_helpers.cmake
cmake/Modules/: FindMETIS.cmake
common/: CMakeLists.txt
core/: CMakeLists.txt
core/base/: array.cpp  extended_float.hpp  mpi.cpp  mtx_io.cpp
core/device_hooks/: CMakeLists.txt  common_kernels.inc.cpp  cuda_hooks.cpp  dpcpp_hooks.cpp  hip_hooks.cpp
core/distributed/: helpers.hpp  matrix.cpp  matrix_kernels.hpp  partition.cpp  partition_kernels.hpp  repartition.cpp  vector.cpp  vector_kernels.hpp
core/factorization/: symbolic.cpp
core/log/: logger.cpp  papi.cpp  profiler_hook.cpp  record.cpp  tau.cpp
core/matrix/: batch_csr.cpp  batch_csr_kernels.hpp  batch_dense.cpp  batch_diagonal.cpp  batch_ell.cpp  coo.cpp  coo_kernels.hpp  csr.cpp  csr_kernels.hpp  dense.cpp  dense_kernels.hpp  diagonal.cpp  ell.cpp  fbcsr.cpp  hybrid.cpp  (+1 more)
cuda/: CMakeLists.txt
devices/: CMakeLists.txt  device.cpp
dpcpp/: CMakeLists.txt
examples/: CMakeLists.txt
examples/matrix-reordering/: CMakeLists.txt  matrix-reordering.cpp
hip/: CMakeLists.txt
matrices/: CMakeLists.txt  config.hpp.in
omp/: CMakeLists.txt
reference/: CMakeLists.txt
(+386 files in other folders)
